# Geditor

./: .gitignore  Cargo.toml  README.md  tempCodeRunnerFile.cpp
CarGO/: Cargo.toml
src/: main.rs
src/editor/: tempCodeRunnerFile.rs  terminal.rs
src/editor/view/: buffer.rs
t1/src/: main.rs
testwebdv/web/: Cargo.toml
testwebdv/web/src/: auth.rs  main.rs  variables.env
testwebdv/web/src/auth/: users.rs
testwebdv/web/static/: index.html  script.js  style.css
text-editor/: .gitignore  test.txt
text-editor/src/: editor.rs  main.rs
text-editor/src/editor/: file.rs  terminal.rs  view.rs
text-editor/src/editor/view/: buffer.rs
