[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio-native-tls"] }
hyper = "1.4.1"
argon2 = "0.5.3"
rand = "0.8.5"
serde = "1.0.210"
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
axum-server = "0.7.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
